feat: add deepfake detection logs